Fixed sizing of welocome page on smaller devices

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -278,7 +278,7 @@ a:hover {
 }
 
 .bg-image-full {
-    height: 40vh;
+    height: 70vh;
     background-size: cover;
     background-position: center;
 }
